--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -64,13 +64,13 @@ jobs:
           command: |      
               cd backend
               npm install
-              npm run test        
+              npm run test
 workflows:
   default:
     jobs:
       - build-frontend
       - build-backend
-      test-frontend:
+      - test-frontend:
           requires: [build-frontend]
       - test-backend:
           requires: [build-backend]
