--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -94,7 +94,14 @@ jobs:
               npm install
               npm audit fix --audit-level=critical --force
               npm audit fix --audit-level=critical --force
-              npm audit --audit-level=critical 
+              npm audit --audit-level=critical
+       - slack/notify:
+          event: fail
+          mentions: '@DevloperTeam'
+          template: basic_fail_1
+      - slack/notify:
+          event: pass
+          template: success_tagged_deploy_1         
 workflows:
   default:
     jobs:
