--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -132,5 +132,5 @@ workflows:
           requires: [build-backend]
       - scan-frontend:
           requires: [build-frontend]    
-      - notify:
+      - notify
            
