--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -149,7 +149,7 @@ jobs:
           root: ~/
           paths:
             - inventory.txt
-      - destroy_environment     
+      # - destroy_environment     
              
 
 
