--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,6 +3,7 @@ orbs:
   slack: circleci/slack@4.10.1
 commands:
   destroy_environment:
+  
     steps:
       - run:
           name: Destroy environment
@@ -10,7 +11,7 @@ commands:
              #${CIRCLE_WORKFLOW_ID:0:5} takes the first 5 chars of the variable CIRCLE_CI_WORKFLOW_ID 
           when: on_fail
           command: |
-             aws cloudformation delete-stack --stack-name myStack-${CIRCLE_WORKFLOW_ID:0:7}
+             aws cloudformation delete-stack --stack-name udapeople-backend-${CIRCLE_WORKFLOW_ID:0:7}
 
 jobs:
   build-frontend:
@@ -149,7 +150,7 @@ jobs:
           root: ~/
           paths:
             - inventory.txt
-      # - destroy_environment     
+      - destroy-environment     
              
 
 
