--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@ version: 2.1
 orbs: 
   slack: circleci/slack@4.10.1
 commands:
-  destroy_environment:
+  destroy-environment:
   
     steps:
       - run:
