--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -151,7 +151,22 @@ jobs:
           paths:
             - inventory.txt
       - destroy-environment     
-             
+  configure-infrastructure:
+    docker:
+      - image: python:3.7-alpine3.11
+    steps:
+      - checkout
+      - add_ssh_keys:
+          fingerprints: ["e5:a1:3f:8e:74:69:20:2e:0d:f5:86:9e:b6:23:10:c1"] 
+      - run:
+          name: Install dependencies
+          command: |
+            apk add --update ansible 
+      - run:
+          name: Configure server
+          command: |
+            cd .circleci/ansible
+            ansible-playbook -i inventory.txt configure-server.yml           
 
 
 workflows:
@@ -171,5 +186,7 @@ workflows:
           requires: [test-frontend, test-backend, scan-frontend, scan-backend]
           filters:
             branches:
-              only: [circleci-project-setup] 
+             only: [circleci-project-setup] 
+      - configure-infrastructure:
+          requires: [deploy-infrastructure]        
            
