--- a/.circleci/ansible/configure-server.yml
+++ b/.circleci/ansible/configure-server.yml
@@ -14,11 +14,12 @@
     
   pre_tasks:
     - name: "wait 600 seconds for target connection to become reachable/usable."
-      shell: sleep 200
+      wait_for_connection:
     - name: "install python for Ansible."
       become: true
       raw: test -e /usr/bin/python3 || (apt -y update && apt install -y python3)
       changed_when: false
+      become: true
 
   # Get the environment variables from CircleCI and add to the EC2 instance
   environment:
