--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -106,13 +106,13 @@ jobs:
               npm audit fix --audit-level=critical --force
               npm audit fix --audit-level=critical --force
               npm audit --audit-level=critical 
-      # - slack/notify:
-      #     event: fail
-      #     mentions: '@GenetsTeam'
-      #     template: basic_fail_1
-      # - slack/notify:
-      #     event: pass
-      #     template: success_tagged_deploy_1     
+      - slack/notify:
+           event: fail
+           mentions: '@GenetsTeam'
+           template: basic_fail_1
+      - slack/notify:
+           event: pass
+           template: success_tagged_deploy_1     
 
   deploy-infrastructure:
     docker:
@@ -166,7 +166,25 @@ jobs:
           name: Configure server
           command: |
             cd .circleci/ansible
-            ansible-playbook -i inventory.txt configure-server.yml           
+            ansible-playbook -i inventory.txt configure-server.yml 
+   run-migrations:
+    docker:
+      - image: circleci/node:13.8.0
+    steps:
+      - checkout 
+      - run:
+          name: Run migrations
+          command: |
+            cd backend
+            npm install
+            npm run migrations > migrations_dump.txt
+      - run:
+          name: Send migration results to memstash
+          command: |
+            if grep -q "has been executed successfully." ~/project/backend/migrations_dump.txt
+            then
+                curl https://kvdb.io/BUzSmxpEEdGXfmNSEq6Jbm/migration_${CIRCLE_WORKFLOW_ID:0:7}  -d '1'
+            fi                    
 
 
 workflows:
