--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -106,13 +106,13 @@ jobs:
               npm audit fix --audit-level=critical --force
               npm audit fix --audit-level=critical --force
               npm audit --audit-level=critical 
-      - slack/notify:
-           event: fail
-           mentions: '@GenetsTeam'
-           template: basic_fail_1
-      - slack/notify:
-           event: pass
-           template: success_tagged_deploy_1     
+      # - slack/notify:
+      #     event: fail
+      #     mentions: '@GenetsTeam'
+      #     template: basic_fail_1
+      # - slack/notify:
+      #     event: pass
+      #     template: success_tagged_deploy_1     
 
   deploy-infrastructure:
     docker:
