--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -108,7 +108,7 @@ jobs:
               npm audit --audit-level=critical 
       - slack/notify:
         event: fail
-          mentions: '@GenetsTeam'
+          mentions: '@DevloperTeam'
           template: basic_fail_1
       - slack/notify:
           event: pass
