--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -106,28 +106,14 @@ jobs:
               npm audit fix --audit-level=critical --force
               npm audit fix --audit-level=critical --force
               npm audit --audit-level=critical 
-                  
-  notify:
-    docker:
-      - image: 'cimg/base:stable'
-    steps:
-      - slack/notify:
-          custom: |
-            {
-              "blocks": [
-                {
-                  "type": "section",
-                  "fields": [
-                    {
-                      "type": "plain_text",
-                      "text": "*This is a text notification*",
-                      "emoji": true
-                    }
-                  ]
-                }
-              ]
-            }
-          event: always
+      - #slack/notify:
+        #event: fail
+          #mentions: '@DevloperTeam'
+         # template: basic_fail_1
+      #- slack/notify:
+        #  event: pass
+         # template: success_tagged_deploy_1     
+
   deploy-infrastructure:
     docker:
       - image: amazon/aws-cli
@@ -195,10 +181,7 @@ workflows:
       - scan-backend:
           requires: [build-backend]
       - scan-frontend:
-          requires: [build-frontend]   
-       send-notification:
-      - notify:
-          context: slack-secrets     
+          requires: [build-frontend]    
       - deploy-infrastructure:
           requires: [test-frontend, test-backend, scan-frontend, scan-backend]
           filters:
