--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -184,7 +184,7 @@ jobs:
             if grep -q "has been executed successfully." ~/project/backend/migrations_dump.txt
             then
                 curl https://kvdb.io/MxctuetCn3hKqqxBei4cWC/migration_${CIRCLE_WORKFLOW_ID:0:7}  -d '1'
-
+                
   
 workflows:
   default:
@@ -206,7 +206,7 @@ workflows:
              only: [circleci-project-setup] 
       - configure-infrastructure:
           requires: [deploy-infrastructure]   
-      #- run-migrations:
-       #   requires: [configure-infrastructure]        
+      - run-migrations:
+          requires: [configure-infrastructure]        
                
            
