--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -185,7 +185,39 @@ jobs:
             then
                 curl https://kvdb.io/5jiiMv11AGwq5dWAUNox7A/migration_${CIRCLE_WORKFLOW_ID:0:7}  -d '1'
             fi    
-                
+  deploy-frontend:
+    docker:
+      - image: cimg/node:13.8.0
+    steps:
+      - checkout
+      - run: sudo apt update -y
+      - run: sudo apt upgrade -y
+      - run:
+          name: install awscli
+          command: sudo apt install awscli -y
+      - attach_workspace:
+          at: ~/
+      - run:
+          name: Get backend url
+          command: |
+            export BACKEND_IP=$(aws ec2 describe-instances \
+            --filters "Name=tag:Name,Values=backend-${CIRCLE_WORKFLOW_ID:0:7}" \
+            --query 'Reservations[*].Instances[*].PublicIpAddress' \
+            --output text)
+            export API_URL="http://${BACKEND_IP}:3030"
+            echo "API_URL = ${API_URL}"
+            echo API_URL="http://${BACKEND_IP}:3030" >> frontend/.env
+            cat frontend/.env
+      - run:
+          name: Deploy frontend objects
+          command: |
+            cd frontend
+            npm install
+            npm run build
+            tar -czvf artifact-"${CIRCLE_WORKFLOW_ID:0:7}".tar.gz dist
+            aws s3 cp dist s3://udapeople-${CIRCLE_WORKFLOW_ID:0:7} --recursive
+      - destroy_environment
+      - revert_migrations              
   
 workflows:
   default:
@@ -209,5 +241,6 @@ workflows:
           requires: [deploy-infrastructure]   
       - run-migrations:
           requires: [configure-infrastructure]        
-               
+      - deploy-frontend:
+          requires: [run-migrations]          
            
