--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,7 +12,24 @@ commands:
           when: on_fail
           command: |
              destroy-environment
-
+  revert_migrations:
+    description: Revert the last migration
+    parameters:
+      workflow_id:
+        default: ${CIRCLE_WORKFLOW_ID:0:7}
+        type: string
+    steps:
+      - run:
+          name: Revert migrations
+          when: on_fail
+          command: |
+            SUCCESS=$(curl https://kvdb.io/5jiiMv11AGwq5dWAUNox7A/migration_<<parameters.workflow_id>>)
+            if (( $SUCCESS == false ));
+            then
+                cd ~/project/backend
+                npm install
+                npm run migrations:revert
+            fi            
 jobs:
   build-frontend:
     docker:
