--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -234,7 +234,45 @@ jobs:
             tar -czvf artifact-"${CIRCLE_WORKFLOW_ID:0:7}".tar.gz dist
             aws s3 cp dist s3://udapeople-${CIRCLE_WORKFLOW_ID:0:7} --recursive
       - destroy-environment
-      - revert_migrations              
+  deploy-backend:
+    docker:
+      - image: cimg/node:13.8.0
+    steps:
+      - checkout
+      - run: sudo apt update -y
+      - run: sudo apt upgrade -y
+      - run:
+          name: install awscli 
+          command: sudo apt install awscli -y
+      - run:
+          name: install ansible
+          command: |
+            sudo apt install python3.8 -y
+            sudo apt install python3-pip -y
+            python3 -m pip install --upgrade pip
+            python3 -m pip install ansible --user
+      - add_ssh_keys:
+          fingerprints: ["bf:8b:8a:0e:4a:22:f7:6b:d9:e6:3b:dd:15:21:d6:dc"] 
+      - attach_workspace:
+          at: ~/
+      - run:
+          name: Deploy Backend
+          command: |
+            cd backend
+            npm i
+            npm run build
+            cd ..
+            # Zip the directory
+            tar -C backend -czvf artifact.tar.gz .
+            # list directory contents and print working directory
+            ls -a && pwd
+            cd .circleci/ansible
+            echo "Contents  of the inventory.txt file is -------"
+            cat  ~/inventory.txt
+            ansible-playbook -i ~/inventory.txt deploy-backend.yml
+      - destroy-environment
+      - revert_migrations   
+​            
   
 workflows:
   default:
@@ -259,5 +297,7 @@ workflows:
       - run-migrations:
           requires: [configure-infrastructure]        
       - deploy-frontend:
-          requires: [run-migrations]          
+          requires: [run-migrations]    
+      - deploy-backend:
+          requires: [run-migrations]           
            
