--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -272,6 +272,44 @@ jobs:
             ansible-playbook -i ~/inventory.txt deploy-backend.yml
       - destroy-environment
       - revert_migrations   
+  smoke-test:
+    docker:
+      - image: cimg/node:13.8.0
+    steps:
+      - checkout
+      - run: sudo apt update -y
+      - run: sudo apt upgrade -y
+      - run:
+          name: Install dependencies
+          command: sudo apt install awscli -y 
+      - run:
+          name: Backend smoke test.
+          command: |
+            export BACKEND_IP=$(aws ec2 describe-instances \
+            --filters "Name=tag:Name,Values=backend-${CIRCLE_WORKFLOW_ID:0:7}" \
+            --query 'Reservations[*].Instances[*].PublicIpAddress' \
+            --output text)
+            export API_URL="http://${BACKEND_IP}:3030"
+            echo "${API_URL}"
+            if curl "${API_URL}/api/status" | grep "ok"
+            then
+                exit 0
+            else
+                exit 1
+            fi      
+      - run:
+          name: Frontend smoke test.
+          command: |
+            URL="http://udapeople-${CIRCLE_WORKFLOW_ID:0:7}.s3-website-us-east-1.amazonaws.com/#/employees"            
+            echo ${URL} 
+            if curl -s ${URL} | grep "Welcome"
+            then
+              exit 1
+            else
+              exit 1
+            fi
+      - destroy-environment
+      - revert_migrations              
 workflows:
   default:
     jobs:
@@ -297,5 +335,7 @@ workflows:
       - deploy-frontend:
           requires: [run-migrations]    
       - deploy-backend:
-          requires: [run-migrations]           
+          requires: [run-migrations]      
+      - smoke-test:
+          requires: [deploy-backend, deploy-frontend]         
            
