--- a/.circleci/ansible/roles/deploy/tasks/main.yml
+++ b/.circleci/ansible/roles/deploy/tasks/main.yml
@@ -11,13 +11,13 @@
 
 - name: install dependencies
   become: true
-  shell: |
+  shell: mkdir app
     cd /home/ubuntu/app
     npm install
 
 - name: Start node server daemon with pm2
   become: true
-  shell: |
+  shell: mkdir app
     cd /home/ubuntu/app
     pm2 stop default
     pm2 start npm -- start
