--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,8 +7,8 @@ commands:
     steps:
       - run:
           name: Destroy environment
-             #${CIRCLE_WORKFLOW_ID} is a Built-in environment variable 
-             #${CIRCLE_WORKFLOW_ID:0:5} takes the first 5 chars of the variable CIRCLE_CI_WORKFLOW_ID 
+             ${CIRCLE_WORKFLOW_ID} is a Built-in environment variable 
+             ${CIRCLE_WORKFLOW_ID:0:5} takes the first 5 chars of the variable CIRCLE_CI_WORKFLOW_ID 
           when: on_fail
           command: |
              destroy-environment
