--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,15 +3,19 @@ orbs:
   slack: circleci/slack@4.10.1
 commands:
   destroy-environment:
-  
-    steps:
-      - run:
-          name: Destroy environment
-             ${CIRCLE_WORKFLOW_ID} is a Built-in environment variable 
-             ${CIRCLE_WORKFLOW_ID:0:5} takes the first 5 chars of the variable CIRCLE_CI_WORKFLOW_ID 
-          when: on_fail
-          command: |
-             destroy-environment
+  description: Destroy cloudformation stacks.
+  parameters:
+    workflow_id:
+      default: ${CIRCLE_WORKFLOW_ID:0:7}
+      type: string
+  steps:
+    - run:
+        name: Destroy environment 
+        when: on_fail
+        command: |
+          aws cloudformation delete-stack --stack-name "udapeople-backend-<<parameters.workflow_id>>"
+          aws s3 rm s3://udapeople-<<parameters.workflow_id>> --recursive
+          aws cloudformation delete-stack --stack-name "udapeople-frontend-<<parameters.workflow_id>>"
   revert_migrations:
     description: Revert the last migration
     parameters:
