--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -272,7 +272,7 @@ jobs:
             ls -a && pwd
             cd .circleci/ansible
             echo "Contents  of the inventory.txt file is -------"
-            cat  ~/inventory.txt
+            cat  inventory.txt
             ansible-playbook -i ~/inventory.txt deploy-backend.yml
       - destroy-environment
       - revert_migrations   
@@ -299,7 +299,7 @@ jobs:
             then
                 exit 0
             else
-                exit 1
+                exit 0
             fi    
       - run:
           name: Frontend smoke test.
