--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -271,7 +271,7 @@ jobs:
             ls -a && pwd
             cd .circleci/ansible
             echo "Contents  of the inventory.txt file is -------"
-            cat  inventory.txt
+            cat  ~/inventory.txt
             ansible-playbook -i ~/inventory.txt deploy-backend.yml
       - destroy-environment
       - revert_migrations   
@@ -296,7 +296,7 @@ jobs:
             echo "${API_URL}"
             if curl "${API_URL}/api/status" | grep "ok"
             then
-                exit 0
+                exit 1
             else
                 exit 0
             fi    
@@ -309,7 +309,7 @@ jobs:
             then
               exit 1
             else
-              exit 0
+              exit 1
             fi         
       - destroy-environment
       - revert_migrations    
