--- a/.circleci/ansible/roles/deploy/tasks/main.yml
+++ b/.circleci/ansible/roles/deploy/tasks/main.yml
@@ -1,27 +1,12 @@
 ---
-- name: Create app directiory
-  file:
-    path: /home/ubuntu/app
-    state: directory
-
-- name: Extract files to remote (EC2 instance)
+- name: "extract artifact"
   unarchive:
-    src: /home/circleci/project/artifact.tar.gz
-    dest: /home/ubuntu/app
+    src: files/artifact.tar.gz
+    dest: .
 
-- name: install dependencies
+- name: start app
   become: true
-  shell: mkdir app
-    cd /home/ubuntu/app
+  shell: |
     npm install
-
-- name: Start node server daemon with pm2
-  become: true
-  shell: mkdir app
-    cd /home/ubuntu/app
     pm2 stop default
     pm2 start npm -- start
-  register: starting_server
-
-- debug:
-    msg: "{{ starting_server.stdout_lines }}"
