--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -386,19 +386,19 @@ workflows:
           requires: [build-backend]
       - scan-frontend:
           requires: [build-frontend]  
-      # - deploy-infrastructure:
-      #     requires: [test-frontend, test-backend, scan-frontend, scan-backend]
-      #     filters:
-      #       branches:
-      #         only: [circleci-project-setup] 
-      # - configure-infrastructure:
-      #     requires: [deploy-infrastructure] 
-      # - run-migrations:
-      #     requires: [configure-infrastructure] 
-      # - deploy-frontend:
-      #     requires: [run-migrations] 
-      # - deploy-backend:
-      #     requires: [run-migrations]  
+       - deploy-infrastructure:
+           requires: [test-frontend, test-backend, scan-frontend, scan-backend]
+           filters:
+             branches:
+               only: [circleci-project-setup] 
+       - configure-infrastructure:
+           requires: [deploy-infrastructure] 
+       - run-migrations:
+           requires: [configure-infrastructure] 
+       - deploy-frontend:
+           requires: [run-migrations] 
+       - deploy-backend:
+           requires: [run-migrations]  
       # - smoke-test:
       #     requires: [deploy-backend, deploy-frontend] 
       # - cloudfront-update:
