--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -185,7 +185,6 @@ jobs:
           paths:
             - inventory.txt
             - old_workflow_id.txt
-
       - destroy_environment
   configure-infrastructure:
     docker:
@@ -205,6 +204,7 @@ jobs:
           command: |
             cd .circleci/ansible
             ansible-playbook -i ~/inventory.txt configure-server.yml
+      - destroy_environment      
   run-migrations:
     docker:
       - image: circleci/node:13.8.0
