--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -192,7 +192,7 @@ jobs:
     steps:
       - checkout
       - add_ssh_keys:
-          fingerprints: ["bb:e4:58:c4:9b:a6:17:0d:d6:9f:cd:b3:8f:73:4e:3b"] 
+          fingerprints: ["08:63:04:91:2f:9d:b7:3d:ae:68:10:34:5a:63:db:fd"] 
       - attach_workspace:
           at: ~/    
       - run:
@@ -263,7 +263,7 @@ jobs:
     steps:
       - checkout
       - add_ssh_keys:
-          fingerprints: ["bb:e4:58:c4:9b:a6:17:0d:d6:9f:cd:b3:8f:73:4e:3b"]
+          fingerprints: ["08:63:04:91:2f:9d:b7:3d:ae:68:10:34:5a:63:db:fd"]
       - attach_workspace:
           at: ~/
       - run:
@@ -399,8 +399,8 @@ workflows:
           requires: [run-migrations] 
       - deploy-backend:
           requires: [run-migrations]  
-      # - smoke-test:
-      #     requires: [deploy-backend, deploy-frontend] 
+      - smoke-test:
+          requires: [deploy-backend, deploy-frontend] 
       # - cloudfront-update:
       #     requires: [smoke-test]
       # # - cleanup:
