--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -188,7 +188,7 @@ jobs:
       - destroy_environment
   configure-infrastructure:
     docker:
-      - image: Python 3.10.5-alpine3.11
+      - image: 3.7.12 -alpine3.11
     steps:
       - checkout
       - add_ssh_keys:
