--- a/.circleci/ansible/configure-server.yml
+++ b/.circleci/ansible/configure-server.yml
@@ -14,19 +14,7 @@
 
   pre_tasks:
     - name: "wait 600 seconds for target connection to become reachable/usable."
-      shell: sleep 50
-
-    - name: "update apt packages."
-      become: true
-      apt:
-        update_cache: true
-      changed_when: False
-
-    - name: "upgrade packages"
-      become: true
-      apt:
-        name: "*"
-        state: latest
+      wait_for_connection:
 
     - name: "install python for Ansible."
       become: true
@@ -47,4 +35,4 @@
   roles:
     - configure-server
     # configure node exporter
-    # - configure-prometheus-node-exporter
+    - configure-prometheus-node-exporter
